# fifa-crowd-nav

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  railway.json  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: auth.py  crowd.py  navigation.py  router.py
backend/app/core/: middleware.py  rate_limiter.py  security.py
backend/app/domain/models/: crowd.py  navigation.py  stadium.py
backend/app/domain/repositories/: stadium_repository.py
backend/app/domain/services/: crowd_analytics.py  genai_navigator.py  graph_router.py
backend/app/infrastructure/: cache.py  genai_client.py
backend/app/middleware/: auth.py  rate_limiter.py  security_headers.py
backend/app/models/: auth.py  crowd.py  navigation.py  stadium.py
backend/app/routers/: crowd.py  health.py  navigation.py  stadiums.py
backend/app/services/: cache.py  crowd_flow.py  genai_translation.py  navigation.py  stadium_registry.py
backend/app/utils/: graph.py  sanitizer.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_middleware.py  test_crowd_endpoints.py  test_navigation_endpoints.py
backend/tests/unit/: test_crowd_flow.py  test_genai_translation.py  test_graph.py  test_graph_router.py  test_navigation.py
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/hooks/: useCrowdData.ts  useNavigation.ts
frontend/src/services/: apiClient.ts
frontend/src/styles/: global.css
frontend/src/types/: api.ts
(+6 files in other folders)
