[tool.poetry]
name = "fifa-crowd-nav-backend"
version = "1.0.0"
description = "GenAI-Enabled Predictive Crowd Flow & Multilingual Navigation System for FIFA World Cup 2026"
authors = ["FIFA 2026 Engineering Team"]
readme = "README.md"
python = "^3.12"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
uvloop = "^0.19.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
redis = {extras = ["hiredis"], version = "^5.0.4"}
slowapi = "^0.1.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bleach = "^6.1.0"
google-generativeai = "^0.7.0"
httpx = "^0.27.0"
structlog = "^24.2.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
fakeredis = {extras = ["aioredis"], version = "^2.23.0"}
factory-boy = "^3.3.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=85"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
